Closed Bug 311547 Opened 19 years ago Closed 19 years ago

[FIX]nsDocument::IsSafeToFlush does unnecessary refcounting

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: perf)

Attachments

(1 file)

There's no need for a COMPtr here.
Attached patch PatchSplinter Review
Attachment #198820 - Flags: superreview?(peterv)
Attachment #198820 - Flags: review?(peterv)
Attachment #198820 - Flags: superreview?(peterv)
Attachment #198820 - Flags: superreview+
Attachment #198820 - Flags: review?(peterv)
Attachment #198820 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: