Remove unnecessary refcounting in IsSafeToFlush.  Bug 311547, r+sr=peterv